{
    "name": "BaseInput",
    "maps": [
        {
            "name": "Player",
            "id": "17370877-260f-4373-9c1e-07e73830ab6a",
            "actions": [
                {
                    "name": "SelectClick",
                    "type": "Button",
                    "id": "41ab0fc4-0d24-48b7-969a-f9f72a70afb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "f0705ad9-14c3-4d1a-9a47-87dec7b97cf7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ActionClick",
                    "type": "Button",
                    "id": "35e11699-55ad-4705-9143-b07b24c34eee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraClick",
                    "type": "Button",
                    "id": "e21b0dcf-9cfe-4693-9dcb-18b110c4750c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Unit1",
                    "type": "Button",
                    "id": "fa9c05ca-d7d6-4205-859a-521a52c9cc6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Unit2",
                    "type": "Button",
                    "id": "a8a811e2-b63e-4f6f-8bcf-6f3087b50cb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Unit3",
                    "type": "Button",
                    "id": "3a16d722-bb8d-48fc-ac51-d82fc2851194",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Unit4",
                    "type": "Button",
                    "id": "aeb5b475-1cec-4883-98e7-bb6b35f8ae54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionModifier",
                    "type": "Button",
                    "id": "c663756b-e2d5-465e-abd3-f6bf0ff68e47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectionModifier",
                    "type": "Button",
                    "id": "8d3dd3a0-6e18-4165-8d9b-33b401d0f043",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "0ce90524-022c-4de9-b349-db6181cc3e81",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd9bfab1-a91d-4b22-93ee-18b0938a2011",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7f3b171-0605-4f3b-b9d0-12ba0b6b8842",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c612e872-0aac-440d-b37c-c4058b1cbb5d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2585acd8-2d2f-4802-b224-d14583eec289",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a122413-1bda-4adb-b307-37e5c9fb8a38",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unit1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4573497-ffd9-404b-9ab9-e440aaf69637",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unit2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3983e3a-5854-480e-a71c-bb7e75fcc517",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unit3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6c11b23-b82f-400b-bc34-e2297c5fda54",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unit4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b98119c-5c22-4712-bec7-4127bf0abb1d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionModifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9977c085-5194-49b2-bbb5-38d9a45b6c6f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectionModifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c60a2c7-cac0-4c46-8538-6606196f0ea4",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}